syntax = "proto3";

option csharp_namespace = "ProductProto";

// this is like methods
service ProductsService {
	rpc GetProductsById(ProductRequest) returns (Product);
}

// representation of classes called = contracts
message ProductRequest{
	int32 id = 1;
}

message Product{
	int32 id = 1;
	string name = 2;
	double price = 3;
	Category Category = 4;
	bool isAvailable = 5;
}

// you can also define enums
enum Category{
	Books = 0;
	Food = 1;
}